# intsynth

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  intsynth
src/: ADSR.h  LowPass.h  NumWaveTableOsc.hpp  SynthVoice.h  client.cpp  esp32soundsynth.ino
